stable-app/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  labels:
    app: my-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.kirandns.site
    http:
      paths:
      - path: /               # added for v1 API
        pathType: Prefix      # required field
        backend:
          service:
            name: my-app-v1   # updated from serviceName
            port:
              number: 80      # updated from servicePort
